--- a/dls.html
+++ b/dls.html
@@ -3,21 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <title>Kwadratz - Downloads</title>
-    <meta name="keywords" content="kwadrat projects kwadratz cavestuck" />
     <meta
       name="description"
       content="My website, with some stuff in it."
     />
     <meta name="author" content="Kwadratz" />
-    <link rel="stylesheet" type="text/css" href="styles.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" type="icon/ico" href="media/favicon.ico"/>
+    <link rel="stylesheet" type="text/css" href="styles.css" />
     <link rel="stylesheet" href="styles.css" />
-    <meta property="og:title" content="Kwadratz - Downloads" />
-    <meta property="og:description" content="Here you can download some files, programs, trash stuff, etc."/>
+    <link rel="shortcut icon" type="icon/ico" href="media/favicon.ico"/>
+    <meta property="og:title" content="Kwadratz" />
+    <meta property="og:description" content="Download links for all the gathered stuff."/>
     <meta property="og:url" content="https://kwadratz.github.io/" />
-    <meta property="og:image" content="media/kwadratz_nm.png" />
-    <script src="script.js"></script>
+    <meta property="og:image" content="media/plainSquareBanner.png" />
+    
   </head>
   <body>
     <header>
@@ -25,28 +24,31 @@
         <img src="media\plainSquareBanner.png" class="header-logo" onclick="window.location.href = 'index.html'">
       </div>
       <div class="header-right-side">
-        <button class="button-links" onclick="window.location.href = 'blog.html'">Blog</button>
         <button class="button-links" onclick="window.location.href = 'projects.html'">Projects</button>
         <button class="button-links" onclick="window.location.href = 'dls.html'">Downloads</button>
         <button class="button-links" onclick="window.location.href = 'contact.html'">Contact</button>
       </div>
     </header>
     <main>
-      <div class="cnt-container">
-        <h1 class="page-title">Downloads</h1>
-          <p class="page-title-p center-text-mobile">
-            SzafAppka v1.0 - Download for <u><a href="https://bit.ly/SzafAppka">Android</a></u><br>
-            SzafAppka v1.1 - Download for <u><a href="https://bit.ly/SzafAppka1">Android</a></u><br>
-            PowerPrompt 1.6.9 - Download for <u><a href="https://github.com/Mihael3007/PowerPrompt/releases/tag/v1.6">Windows</a></u><br>
-            PowerPrompt 1.7.0 - Download for <u><a href="https://github.com/Mihael3007/PowerPrompt/releases/tag/v1.7">Windows</a></u><br>
-            PowerPrompt 1.7.1 - Download for <u><a href="https://github.com/Mihael3007/PowerPrompt/releases/tag/v1.7.1">Windows</a></u><br>
-            Turtlebrush - Download for <u><a href="https://kwadratprojects.glitch.me/turtlebrush.py">Windows</a></u> <u><a href="https://kwadratprojects.glitch.me/turtlebrush.py">Linux</a></u>
-            <i> TurtleBrush 2.0 coming (not that) soon, shhh...</i><br>
-          </p>
-      </div>
+      <div class="box-flex-container">
+        <div class="box-flex-element b1 full-width no-color">
+          <div class="title-bg-div projects-bg-color dle-bm">
+            <h2 class="bfe-title">Downloads</h2>
+            <h4 class="bfe-title">Here you can find download links for some very random stuff.</h4>
+          </div>
+            <div class="dls-list-element"><div class="dle-left"><h3 class="bfe-title">SzafAppka v1.0.1</h3></div><div class="dle-right"><button class="dls-download-btn btn-gray" onclick="window.location.href = 'https://bit.ly/szafappka/'">Download<img src="media/android.png" class="os-icon" alt="Android"></button></div></div>
+            <div class="dls-list-element"><div class="dle-left"><h3 class="bfe-title">SzafAppka v1.1.0</h3></div><div class="dle-right"><button class="dls-download-btn btn-gray" onclick="window.location.href = 'https://bit.ly/szafappka1/'">Download<img src="media/android.png" class="os-icon" alt="Android"></button></div></div>
+            <div class="dls-list-element"><div class="dle-left"><h3 class="bfe-title">PowerPrompt v1.6.9</h3></div><div class="dle-right"><button class="dls-download-btn btn-gray" onclick="window.location.href = 'https://github.com/Mihael3007/PowerPrompt/releases/tag/v1.6'">Download<img src="media/windows.png" class="os-icon" alt="Windows"></button></div></div>
+            <div class="dls-list-element"><div class="dle-left"><h3 class="bfe-title">PowerPrompt v1.7.0</h3></div><div class="dle-right"><button class="dls-download-btn btn-gray" onclick="window.location.href = 'https://github.com/Mihael3007/PowerPrompt/releases/tag/v1.7'">Download<img src="media/windows.png" class="os-icon" alt="Windows"></button></div></div>
+            <div class="dls-list-element"><div class="dle-left"><h3 class="bfe-title">PowerPrompt v1.7.1</h3></div><div class="dle-right"><button class="dls-download-btn btn-gray" onclick="window.location.href = 'https://github.com/Mihael3007/PowerPrompt/releases/tag/v1.7.1'">Download<img src="media/windows.png" class="os-icon" alt="Windows"></button></div></div>
+            <div class="dls-list-element"><div class="dle-left"><h3 class="bfe-title">Turtlebrush v1.0.2</h3><h5 class="bfe-title">Tool for drawing in PythonTurtle</h5></div><div class="dle-right"><button class="dls-download-btn btn-gray" onclick="window.location.href = 'https://kwadratprojects.glitch.me/turtlebrush.py'">Download<img src="media/windows.png" class="os-icon" alt="Windows"></button><button class="dls-download-btn btn-gray" onclick="window.location.href = 'https://kwadratprojects.glitch.me/turtlebrush.py'">Download<img src="media/linux.png" class="os-icon" alt="Linux"></button></div></div>
+          </div>
+        <hr>
       <footer>
         <h6 class="page-title footer_text">Copyright Kwadratz 2022 - 2023. All rights reserved.</h6>
       </footer>
+      </div>
     </main>
   </body>
+  <script src="script.js"></script>
 </html>
