--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
             <div class="contact-row">
               <img src="media/discord.png" alt="Discord">
               <p>Discord</p>
-              <button class="dls-download-btn btn-gray" style="padding-right: 50px;" onclick="copyText('Kwadratz#8924')">Kwadratz#8924</button>
+              <div class="tooltip"><button class="dls-download-btn btn-gray" style="padding-right: 50px;" onclick="copyText('Kwadratz#8924')">Kwadratz#8924</button><span class="tooltiptext">Click to copy!</span></div>
               <button class="dls-download-btn btn-blue" style="width: 210px;" onclick="window.location.href = 'https://discord.gg/EGs5BygnQH'">Join my Discord...</button>
               <button class="dls-download-btn btn-gray" style="width: 230px;" onclick="window.location.href = 'https://bit.ly/ShroomsScootersKazoos'">...or my friend's one!</button>
             </div>
@@ -67,7 +67,7 @@
             <div class="contact-row">
               <img src="media/email.svg" style="width: 35px; margin-right: 10px;" alt="E-mail">
               <p>E-mail</p>
-              <button class="dls-download-btn btn-gray" style="width: auto" onclick="copyText('kwadratz.contact@gmail.com')">kwadratz.contact@gmail.com</button>
+              <div class="tooltip"><button class="dls-download-btn btn-gray" style="width: auto" onclick="copyText('kwadratz.contact@gmail.com')">kwadratz.contact@gmail.com</button><span class="tooltiptext">Click to copy!</span></div>
             </div>
           </div>
         </div>
